--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h6 {
  
     width: 100%;
     height: 100vh;
-    background: url("/assets/img/out.jpg") no-repeat;
+    background: url("assets/img/out.jpg") no-repeat;
     background-size: cover;
     background-position: center;
 
