--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h6 {
  
     width: 100%;
     height: 100vh;
-    background: url("/assets/img/out.jpg") no-repeat;
+    background-color: #122f57;
     background-size: cover;
     background-position: center;
 
@@ -263,13 +263,13 @@ h6 {
 }
 
 #hero .hero-container {
-  position: relative;
+  position: absolute;
   z-index: 2;
   min-width: 300px;
 }
 
 #hero h1 {
-  margin: 220px 0 10px 200px;
+  margin: 0px 0 0px 0px;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -279,7 +279,7 @@ h6 {
 #hero p {
   color: #fff;
   margin-bottom: 50px;
-  margin-left: 200px;
+  margin-left: 0px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
@@ -537,6 +537,18 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.portfolio-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adding box shadow */
+  transition: transform 0.3s ease;
+}
+
+.portfolio-item:hover {
+  transform: translateY(-5px); /* Adding a slight lift effect on hover */
+}
+
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
